<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:gravity="center">
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimens_32"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/register_text_01"
        android:text="@string/register_text_01"
        style="@style/big_black_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/register_next"
        android:text="@string/register_next"
        android:maxLength="11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/dimens_18"
        android:id="@+id/register_text_02"
        android:text="@string/register_text_02"
        app:layout_constraintTop_toBottomOf="@id/register_text_01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/small_gray_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_register_phone"
        android:layout_marginTop="@dimen/dimens_72"
        app:layout_constraintTop_toBottomOf="@id/register_text_02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="phone"
        style="@style/big_size_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>
